--- a/6-March-2022/style.css
+++ b/6-March-2022/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
 }
-
 .header
 {
     min-height: 100vh;
@@ -10,7 +9,6 @@
     background-color: black;
     background-size: cover;
     position: relative;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCFWyuT6JU3o95kKOPSklcskJ867QI8KegEoYUW_YIXJVWkvGh45w5RNt4G7fwwMjbDI8&usqp=CAU);
 }
 nav
 {
@@ -48,102 +46,54 @@ nav
 
 .content
 {
-    width: 95%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     color: white;
     display: flex;
     padding: 1% 2%;
     margin: 2% 2%;
 }
-#Samsung{
+#Samsung , #Redmi , #Sonata , #Boat{
     display: none;
 }
 img{
-    width: 90%;
-    height: 25vh;
+    width: 50%;
+    height:30%;
+    margin-left: 20%;
 }
 .box{
     background-color: white;
     border: 2px solid black;
     border-radius:10px ;
     color: black;
-    width: 100%;
-    min-height: 80%;
-    margin-left:2%;
+    width: 50%;
+    min-height: 50%;
+    margin-left:20%;
     padding: 2% 2%;
 }
 .box h3{
     font-size: 25px;
     color: green;
 }
+.Details{
+    display: none;
+    font-size: 100%;
+    color: rgb(214, 14, 14);
+    font-family: cursive;
+}
 .box p{
-    
+   
     font-size: 5px;
     color: black;
     margin-bottom: 2%;
     }
-
-
 .box h2{
     font-size: 20px;
     font-weight: bold;
     text-shadow: 2px 2px 20px black;
 }
-
-/*
-.box1{
-        width: 30%;
-        height: 80%;
-        align-items: center;
-    }         
-
-
-.box2
-{
-    width: 40%;
-    height: 80%;
-    margin-left:10%;
+h1{
+    text-align: center;
+    color: rgb(0, 255, 98);
 }
-
-
-.box3
-{
-    width: 55%;
-    height: 80%;
-    margin-left:10%;
-}
-.box2 img
-{
-    width: 40%;
-    border-radius: 20%;
-    margin: 15%;
-    box-shadow: 2px 2px 20px red;
-}
-span{
-    color:green;
-}
-.box3 button{
-    width: 80%;
-    font-size: 15px;
-    padding: 1%;
-    border-radius: 10px;
-    transition: 1s;
-    font-weight: bold;
-}
-.box3 button:hover{
-    width: 80%;
-    font-size: 15px;
-    background-color: green;
-    padding: 1%;
-    border-radius: 10px;
-}*/
-
-
-
-
-
-
-
-
-
 
