--- a/13-03-2022/weather/weather.css
+++ b/13-03-2022/weather/weather.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('./day.jpg');
+    background-image: url('images/clear.jpg');
     height: 30vh;
     overflow: hidden;
     background-repeat: no-repeat;
